<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161A35"
    android:orientation="vertical"
    tools:context=".FrequencyActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:paddingLeft="45dp">
        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/analytics"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:text="@string/frequency_ques"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/frequency_one"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_filter_1_black_24dp"
                android:background="@drawable/btn_ques"
                android:text="@string/one"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="#000"/>

            <Button
                android:id="@+id/frequency_two"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_filter_2_black_24dp"
                android:background="@drawable/btn_ques"
                android:text="@string/two"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="#000"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>