<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#161A35"
    tools:context=".ExperimentalIndependent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:paddingLeft="45dp">
        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/analytics"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:text="@string/slct_measure_type"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/exp_independent_one"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/independent"
                android:background="@drawable/btn_ques"
                android:text="@string/independent_measure"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="#000"/>

            <Button
                android:id="@+id/exp_independent_two"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/repeat"
                android:background="@drawable/btn_ques"
                android:text="@string/repetive_measure"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="#000"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>